# vehicle_maintenance_management_prediction

./: README.md  generate.py  pyproject.toml  requirements.txt  train.py  vehicle_maintenance_data.csv
vmms/: db.sqlite3  manage.py
vmms/predictor/: apps.py  ml_model.py  models.py  serializers.py  urls.py  views.py
vmms/predictor/migrations/: 0001_initial.py
vmms/static/css/: styles.css
vmms/static/js/: predictor.js  visualization.js
vmms/templates/predictor/: index.html  visualization.html
vmms/visualizations/: sample_data.csv
vmms/vmms/: asgi.py  settings.py  wsgi.py
